--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = palworld-server-toolkit
-version = 0.2.4
+version = 0.2.5
 author = MagicBear
 author_email = magicbearmo@gmail.com
 description = A toolset for PalWorld Server
@@ -13,12 +13,5 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-packages = find_namespace:
-package_dir = 
-install_requires =
-	palworld-save-tools
+packages = find:
 python_requires = >=3.9
-include_package_data = true
-
-[option.package_data]
-* = PalEdit/*
