README: add GUI operate guide for migrate Major:
- DeleteMapObject will delete item containers now

Feature:

- BatchDeleteItemContainers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "palworld-save-tools",
+    "palworld-save-tools >=0.18.0",
     "pillow",
     "pyperclip"
 ]
