Fix for packaging

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = save_tools
 	url = https://github.com/cheahjs/palworld-save-tools.git
 [submodule "PalEdit"]
-	path = PalEdit
+	path = palworld_server_toolkit/PalEdit
 	url = https://github.com/magicbear/PalEdit.git
