--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = palworld-server-toolkit
-version = 0.3.7
+version = 0.3.8
 author = MagicBear
 author_email = magicbearmo@gmail.com
 description = A toolset for PalWorld Server
@@ -13,5 +13,14 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-packages = find:
+package_dir =
+    palworld_server_toolkit.PalEdit=palworld_server_toolkit/PalEdit/
+    palworld_server_toolkit.PalEdit.lib=palworld_server_toolkit/PalEdit/lib/
+    palworld_server_toolkit.PalEdit.lib.rawdata=palworld_server_toolkit/PalEdit/lib/rawdata/
+#packages = find:
+packages = 
+    palworld_server_toolkit
+    palworld_server_toolkit.PalEdit
+    palworld_server_toolkit.PalEdit.lib
+    palworld_server_toolkit.PalEdit.lib.rawdata
 python_requires = >=3.9
