--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ classifiers = [
 dependencies = [
     "palworld-save-tools >=0.18.0",
     "pillow",
-    "pyperclip"
+    "pyperclip",
+    "recordclass"
 ]
 dynamic = ["version"]
 
