--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,4 @@
 graft palworld_server_toolkit/PalEdit/resources
-graft palworld_server_toolkit/resources
+prune palworld_server_toolkit/resources/items
+prune palworld_server_toolkit/resources/pal_category
+prune palworld_server_toolkit/resources/pal_inventory
