change memoryview to ctype, remove depend on multiprocessing.Array & multiprocessing.Value

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "palworld-save-tools >=0.18.0",
     "pillow",
     "pyperclip",
-    "recordclass"
+    "recordclass",
+    "msgpack"
 ]
 dynamic = ["version"]
 
