feat: Migrate player to specified Steam ID

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "palworld-save-tools >=0.18.0",
     "pyperclip",
     "recordclass",
-    "msgpack"
+    "msgpack",
+    "cityhash"
 ]
 dynamic = ["version"]
 
