--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "PalEdit"]
-	path = palworld_server_toolkit/pal_edit
-	url = https://github.com/magicbear/PalEdit.git
 [submodule "save_tools"]
 	path = save_tools
 	url = https://github.com/cheahjs/palworld-save-tools.git
+[submodule "pal_edit"]
+	path = pal_edit
+	url = https://github.com/magicbear/PalEdit.git
