add sponsor link

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = palworld-server-toolkit
-version = 0.8.2
+version = 0.8.3
 author = MagicBear
 author_email = magicbearmo@gmail.com
 description = A toolset for PalWorld Server
@@ -14,9 +14,12 @@ classifiers =
 
 [options]
 package_dir =
-    palworld_server_toolkit.PalEdit=palworld_server_toolkit/pal_edit/palworld_pal_edit
+    palworld_pal_edit=pal_edit/palworld_pal_edit
 #packages = find:
 packages =
     palworld_server_toolkit
-    palworld_server_toolkit.PalEdit
+    palworld_pal_edit
 python_requires = >=3.9
+exclude =
+    CxFreezeCompile.py
+    palworld_server_toolkit/premium.py
